fixed git_bin not found bug

--- a/gitprep.conf
+++ b/gitprep.conf
@@ -2,5 +2,10 @@
 ;;; SSH port
 ;ssh_port=55555
 
+;;; Git command path
+;git_bin=/usr/local/bin/git
+;git_bin=~/local/git
+
+
 [hypnotoad]
 listen=http://*:10020
