improved password encrypt system

--- a/gitprep.conf
+++ b/gitprep.conf
@@ -6,6 +6,11 @@
 ;git_bin=/usr/local/bin/git
 ;git_bin=~/local/git
 
+[admin]
+;;; If you forget admin password,
+;;; set this value to 1 and access /reset-password page.
+;;; Forget to comment out after resetting password.
+;reset_password=1
 
 [hypnotoad]
 listen=http://*:10020
