move database and repository to data directory

--- a/.gitignore
+++ b/.gitignore
@@ -18,18 +18,11 @@ log/*
 script/hypnotoad.pid
 !public/.gitignore
 script/hypnotoad.pid
-winstart.pid
-user/public/*
-!user/public/.gitignore
-user/templates/*
-!user/templates/.gitignore
-db/*
-!db/.gitignore
 extlib/*
-rep/*
 gitprep.my.conf
-rep/*
-!rep/.gitignore
+data/rep/*
+data/gitprep.db
+!data/rep/.gitignore
 setup/log/*
 !setup/log/.gitignore
 setup/latest-build
