added reverse proxy path_depth support

--- a/gitprep.conf
+++ b/gitprep.conf
@@ -11,5 +11,15 @@
 ;;; Forget to comment out after resetting password.
 ;reset_password=1
 
+[reverse_proxy]
+;;; Reverse proxy support
+;on=1
+
+;;; Reverse proxy path depth
+;;; If proxy path is http://somehost.com/foo, you set path_depth to 1.
+;;; If proxy path is http://somehost.com/foo/bar, you set path_depth to 2.
+;path_depth=1
+;path_depth=2
+
 [hypnotoad]
 listen=http://*:10020
