improved tag page design

--- a/gitprep.conf
+++ b/gitprep.conf
@@ -5,6 +5,9 @@
 ;;; Git command path
 ;git_bin=/usr/local/bin/git
 
+;;; Tags limit
+;tags_limit=1000
+
 [admin]
 ;;; If you forget admin password,
 ;;; set this value to 1 and access /reset-password page.
