cleanup blob and raw page and fixed raw page encoding bug

--- a/gitprep.conf
+++ b/gitprep.conf
@@ -8,6 +8,12 @@
 ;;; Tags limit
 ;tags_limit=1000
 
+;;; Prevent XSS
+;;; If prevent_xss is set to 1,
+;;; raw content exept text, png, gif, jpeg image,
+;;; file is donwloaded, not displayed.
+;prevent_xss=1
+
 [admin]
 ;;; If you forget admin password,
 ;;; set this value to 1 and access /reset-password page.
