--- a/gitprep.conf
+++ b/gitprep.conf
@@ -20,6 +20,10 @@
 ;;; Forget to comment out after resetting password.
 ;reset_password=1
 
+[hypnotoad]
+;;; Listen URL
+;listen=http://*:10020
+
 [reverse_proxy]
 ;;; Reverse proxy support
 ;on=1
@@ -29,6 +33,3 @@
 ;;; If proxy path is http://somehost.com/foo/bar, you set path_depth to 2.
 ;path_depth=1
 ;path_depth=2
-
-[hypnotoad]
-listen=http://*:10020
