improved config description

--- a/gitprep.conf
+++ b/gitprep.conf
@@ -1,17 +1,22 @@
+;;; GitPrep configuration file
+
 [basic]
-;;; SSH port
+;;; SSH port (default: 22)
+;;; This value is used by ssh git repository URL.
 ;ssh_port=55555
 
 ;;; Git command path
+;;; By default, git command path is automatically detected
+;;; from PATH enviroment variable or /usr/bin/git or /usr/local/bin/git
 ;git_bin=/usr/local/bin/git
 
-;;; Tags limit
+;;; Tags limit (default:1000)
 ;tags_limit=1000
 
 ;;; Prevent XSS
 ;;; If prevent_xss is set to 1,
-;;; raw content exept text, png, gif, jpeg image,
-;;; file is donwloaded, not displayed.
+;;; binary file except png, gif, jpeg
+;;; is downloaded, not displayed.
 ;prevent_xss=1
 
 [admin]
@@ -21,14 +26,14 @@
 ;reset_password=1
 
 [hypnotoad]
-;;; Listen URL
+;;; Listen URL (default: http://*:10020)
 ;listen=http://*:10020
 
 [reverse_proxy]
-;;; Reverse proxy support
+;;; Reverse proxy support (default: 0)
 ;on=1
 
-;;; Reverse proxy path depth
+;;; Reverse proxy path depth (default: none)
 ;;; If proxy path is http://somehost.com/foo, you set path_depth to 1.
 ;;; If proxy path is http://somehost.com/foo/bar, you set path_depth to 2.
 ;path_depth=1
