--- a/gitprep.conf
+++ b/gitprep.conf
@@ -13,6 +13,10 @@
 ;;; Tags limit (default:1000)
 ;tags_limit=1000
 
+;;; If you set this value to 1, user need login to see git repositories.
+;;; Default is 0
+;need_login_always=1
+
 [admin]
 ;;; If you forget admin password,
 ;;; set this value to 1 and access /reset-password page.
