add time zone system

--- a/gitprep.conf
+++ b/gitprep.conf
@@ -13,6 +13,13 @@
 ;;; Tags limit (default:1000)
 ;tags_limit=1000
 
+;;; Time Zone
+;;; GitPrep time zone is GMT by default
+;;; You can set your local time zone.
+;time_zone=+9:00
+;time_zone=+10:30
+;time_zone=-4:00
+
 [admin]
 ;;; If you forget admin password,
 ;;; set this value to 1 and access /reset-password page.
