--- a/gitprep.conf
+++ b/gitprep.conf
@@ -20,6 +20,11 @@
 ;time_zone=+10:30
 ;time_zone=-4:00
 
+;;; Suspects encoding list for source code character encoding (default:UTF-8)
+;;; set comma separated encoding list if your source code is different from UTF-8.
+;;; encoding name follow Perl encoding API.
+;encoding_suspects=cp932,utf8
+
 [admin]
 ;;; If you forget admin password,
 ;;; set this value to 1 and access /reset-password page.
