--- a/gitprep.conf
+++ b/gitprep.conf
@@ -23,7 +23,7 @@
 ;;; Suspects encoding list for source code character encoding (default:UTF-8)
 ;;; set comma separated encoding list if your source code is different from UTF-8.
 ;;; encoding name follow Perl encoding API.
-;encoding_suspects=cp932,utf8
+;encoding_suspects=cp932,UTF-8
 
 [admin]
 ;;; If you forget admin password,
