add key delete feature and update authorized_key file system

--- a/gitprep.conf
+++ b/gitprep.conf
@@ -25,6 +25,10 @@
 ;;; encoding name follow Perl encoding API.
 ;encoding_suspects=cp932,UTF-8
 
+;;; authorized_keys file for public key authentication via ssh.
+;;; default is "$ENV{HOME}/.ssh/authorized_keys"
+; authorized_keys_file=/home/gitprep/.ssh/authorized_keys
+
 [admin]
 ;;; If you forget admin password,
 ;;; set this value to 1 and access /reset-password page.
