rename ssh_repo_url_base option to ssh_rep_url_base

--- a/gitprep.conf
+++ b/gitprep.conf
@@ -8,7 +8,7 @@
 ;;; SSH repository url base
 ; For exampke, If you set this value to /git, SSH repository url become
 ; ssh://kimoto@59.106.185.196/git/kimoto/gitprep.git
-;ssh_repo_url_base=/git
+;ssh_rep_url_base=/git
 
 ;;; Git command path
 ;;; By default, git command path is automatically detected
