add show_ignore_space_change_link option to show --ignore-space-change page easily

--- a/gitprep.conf
+++ b/gitprep.conf
@@ -34,6 +34,9 @@
 ;;; default is "$ENV{HOME}/.ssh/authorized_keys"
 ; authorized_keys_file=/home/gitprep/.ssh/authorized_keys
 
+;;; Show ignore space change link, default to 0
+; show_ignore_space_change_link=1
+
 [admin]
 ;;; If you forget admin password,
 ;;; set this value to 1 and access /reset-password page.
