fix bug that repository with read can't be created when git global user name and email

--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,8 @@ script/hypnotoad.pid
 extlib/*
 gitprep.my.conf
 data/rep/*
+data/work/*
+!data/work/.gitignore
 data/gitprep.db
 !data/rep/.gitignore
 setup/log/*
