add gitprep-shell wrappter script to run current perl

--- a/.gitignore
+++ b/.gitignore
@@ -16,9 +16,9 @@ MYMETA.json
 MYMETA.yml
 log/*
 !log/.gitignore
+script/gitprep-shell
 script/hypnotoad.pid
 !public/.gitignore
-script/hypnotoad.pid
 extlib/*
 gitprep.my.conf
 data/*
