improve the way to hide user home directory in SSH URL

--- a/gitprep.conf
+++ b/gitprep.conf
@@ -6,9 +6,10 @@
 ;ssh_port=55555
 
 ;;; SSH repository url base
-; For exampke, If you set this value to /git, SSH repository url become
-; ssh://kimoto@59.106.185.196/git/kimoto/gitprep.git
-;ssh_rep_url_base=/git
+; For exampke, If you set this value to /~/git, SSH repository url become
+; ssh://kimoto@59.106.185.196/~/git/kimoto/gitprep.git
+; ~ is exapned to user home directory automatically
+;ssh_rep_url_base=/~/git
 
 ;;; Git command path
 ;;; By default, git command path is automatically detected
