improve .gitignore using gitkeep

--- a/.gitignore
+++ b/.gitignore
@@ -15,19 +15,15 @@ pm_to_blib
 MYMETA.json
 MYMETA.yml
 log/*
-!log/.gitignore
 script/gitprep-shell
 script/hypnotoad.pid
-!public/.gitignore
 extlib/*
 gitprep.my.conf
 data/*
+!data/rep/
 data/rep/*
+!data/work/
 data/work/*
-!data/work/.gitignore
-!data/rep/.gitignore
-setup/log/*
-!setup/log/.gitignore
 setup/latest-build
 setup/work/*
 setup/build.log
@@ -35,5 +31,5 @@ xt/user/*
 xt/import_rep/*
 xt/smart_http/*
 xt/basic/rep/kimoto/*
-!xt/basic/rep/kimoto/.gitignore
 xt/basic/work/*
+!.gitkeep
