improve wiki data directory

--- a/.gitignore
+++ b/.gitignore
@@ -24,10 +24,12 @@ data/*
 data/rep/*
 !data/work/
 data/work/*
-!data/wiki_rep/
-data/wiki_rep/*
-!data/wiki_work/
-data/wiki_work/*
+!data/wiki/
+data/wiki/*
+!data/wiki/rep/
+data/wiki/rep/*
+!data/wiki/work/
+data/wiki/work/*
 setup/latest-build
 setup/work/*
 setup/build.log
