Use rewrite rules instead of file access rules in Apache configuration
File access rules, which allow or deny based on file name, create
problems on certain shared hosting platforms, due to a conflict
between the server-wide security filters and Apache rules for denying
access. Using rewrite rules instead of access rules protects
application files without causing these problems.

Also, these platforms are often not configured to handle CGI
executables by default. Including directives for CGI handling in the
local configuration file reduces the complexity of deploying the
application in these environments.

--- a/.htaccess
+++ b/.htaccess
@@ -1,9 +1,9 @@
-deny from all
+Options +ExecCGI
+AddHandler cgi-script .cgi
 
-<Files ~ "gitprep\.cgi">
-allow from all
-</Files>
+RewriteEngine On
+
+RewriteRule "^$" "gitprep.cgi"
+RewriteRule "!^gitprep\.cgi(\/|$)" "" [F]
 
 SetEnvIf Authorization "(.*)" HTTP_AUTHORIZATION=$1
-
-DirectoryIndex index.cgi
