--- a/gitprep.conf
+++ b/gitprep.conf
@@ -30,6 +30,9 @@
 ;;; default is "$ENV{HOME}/.ssh/authorized_keys"
 ; authorized_keys_file=/home/gitprep/.ssh/authorized_keys
 
+;;; hide all repositories until user logs in (default: 0)
+; hide_from_public=1
+
 [admin]
 ;;; If you forget admin password,
 ;;; set this value to 1 and access /reset-password page.
