--- a/gitprep.conf
+++ b/gitprep.conf
@@ -8,8 +8,8 @@
 ;;; SSH repository url base
 ; For exampke, If you set this value to /~/git, SSH repository url become
 ; ssh://kimoto@59.106.185.196/~/git/kimoto/gitprep.git
-; ~ is exapned to user home directory automatically
-;ssh_rep_url_base=/~/git
+; ~ is expaned to user home directory automatically
+; ssh_rep_url_base=/~/git
 
 ;;; Git command path
 ;;; By default, git command path is automatically detected
@@ -33,6 +33,10 @@
 ;;; hide all repositories until user logs in (default: 0)
 ; hide_from_public=1
 
+;;; log files
+; mojo_log_file_path=/home/gitgui/gitprep/log/production.log
+; access_log_file_path=/home/gitgui/gitprep/log/access.log
+
 [admin]
 ;;; If you forget admin password,
 ;;; set this value to 1 and access /reset-password page.
@@ -41,7 +45,7 @@
 
 [hypnotoad]
 ;;; Listen URL (default: http://*:10020)
-;listen=http://*:10020
+listen=http://127.0.0.1:10020
 
 [reverse_proxy]
 ;;; Reverse proxy support (default: 0)
