--- a/gitprep.conf
+++ b/gitprep.conf
@@ -32,6 +32,8 @@
 
 ;;; hide all repositories until user logs in (default: 0)
 ; hide_from_public=1
+;;; show emails in the public user profile; default is don't show
+show_emails=1
 
 ;;; log files
 ; mojo_log_file_path=/home/gitgui/gitprep/log/production.log
