can set up a custom template folder to override what is in ./templates/ and brand the instance

--- a/gitprep.conf
+++ b/gitprep.conf
@@ -39,6 +39,10 @@ show_emails=1
 ; mojo_log_file_path=/home/gitgui/gitprep/log/production.log
 ; access_log_file_path=/home/gitgui/gitprep/log/access.log
 
+[templates]
+;;; put here custom templates overriding the defaults provided by gitprep; requires full path
+custom_template_folder=/home/gitprep/gitprep/templates_custom
+
 [admin]
 ;;; If you forget admin password,
 ;;; set this value to 1 and access /reset-password page.
