--- a/gitprep.conf.example
+++ b/gitprep.conf.example
@@ -1,6 +1,10 @@
 ;;; GitPrep configuration file
 
 [basic]
+;;; A secret passphrase to randomize several things.
+;;; It is recommended to set it to your own choice.
+; secret=PleaseChangeMe!
+
 ;;; SSH port (default: 22)
 ;;; This value is used by ssh git repository URL.
 ; ssh_port=55555
