--- a/gitprep.conf.example
+++ b/gitprep.conf.example
@@ -55,6 +55,10 @@ show_emails=1
 
 [hypnotoad]
 ;;; Listen URL (default: http://*:10020)
+; listen=http://127.0.0.1:10020,\
+; https://127.0.0.1:10443?cert=/path/to/servercert.crt&\
+; key=/path/to/servercert.key&\
+; ca=/path/to/ca-bundle.crt
 listen=http://127.0.0.1:10020
 
 [reverse_proxy]
