--- a/gitprep.conf.example
+++ b/gitprep.conf.example
@@ -15,6 +15,17 @@
 ;;; ~ is expaned to user home directory automatically
 ; ssh_rep_url_base=/~/git
 
+;;; Use scp-like pseudo-urls rather than true SSH urls when possible.
+;;; This generally generates shorter urls as they have no scheme and can be
+;;; relative to the git user home directory.
+;;; As these pseudo-urls cannot specify an alternate port, this option is
+;;; ignored if ssh_port option is defined.
+;;; A leading /~ in ssh_rep_url option stands for the git user's
+;;; home directory and is thus stripped off to the benefit of a relative path.
+;;; Taking the example above, the resulting pseudo-url will be:
+;;; kimoto@59.106.185.196:git/kimoto/gitprep.git
+scp_url=1
+
 ;;; SSH user for git URLs (default: user running server)
 ; ssh_user=mygit
 
