Implement git hooks
The git shell script exports all parameters needed by hooks in environment
and makes sure hooks are installed up-to-date in project's git repository.

Git hooks installed by gitprep are shell scripts redirecting to perl
scripts residing in the installation tree.

This commit only installs a post-receive hook that informs a pushing user
about the new pull request link upon branch creation.

--- a/gitprep.conf.example
+++ b/gitprep.conf.example
@@ -50,6 +50,15 @@ show_emails=1
 ; mojo_log_file_path=/home/gitgui/gitprep/log/production.log
 ; access_log_file_path=/home/gitgui/gitprep/log/access.log
 
+;;; New pull request http URL
+;;; This is used to build the new pull request link in comment displayed by
+;;; git push upon new branch creation.
+;;; It can be set either to a listening URL or a reverse proxy URL linking to
+;;; the root of the gitprep service. The userinfo, query and fragment parts are
+;;; ignored.
+;;; By default, the new pull request comment is disabled.
+; new_pr_url=https://somehost.com
+
 [templates]
 ;;; put here custom templates overriding the defaults provided by gitprep; requires full path
 ; custom_template_folder=/home/gitprep/gitprep/templates_custom
